# agent-openai-python-banking-assistant

./: AGENTS.md  README.md  azure.yaml  lab-01.md  lab-02.md  lab-03.md  lab-04.md  lab-05.md  lab-06.md  lab-07.md  lab-08.md  lab-09.md  lab-10.md  setup-lab.sh
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: aca-deploy.yaml  app-ci.yaml  azd-ai-template-validation.yml  azure-dev.yml  infra-ci.yaml
app/backend/: .dockerignore  .env.dev.example  Dockerfile  applicationinsights.json  pyproject.toml  uv.lock.1.0.0b251016  uv.lock.1.0.0b251114
app/teams-app/: README.md  manifest.json
docs/: chat-server-protocol.md  client-managed-widgets.md  deployment-guide.md  local-testing-m365.md  m365-teams-integration.md  server-managed-widgets.md  technical-architecture.md  troubleshooting.md
docs/foundry-template/: asset.yaml  spec.yaml
infra/: main.bicep  main.parameters.json
infra/app/: account.bicep  backend.bicep  transaction.bicep
labs/lab-05/app/business-api/python/transaction/: main.py  pyproject.toml
labs/lab-08/app/backend/: pyproject.toml
labs/lab-08/app/backend/app/: main.py
labs/lab-08/app/backend/app/agents/: account_agent.py  payment_agent.py
labs/lab-08/app/backend/app/config/: container.py  settings.py
labs/lab-08/app/backend/app/helpers/: blob_proxy.py  document_intelligence_scanner.py
labs/lab-08/app/backend/app/routers/: attachment_routers.py  attachment_store.py  chat_routers.py  chatkit_server.py  memory_store.py
scripts/: setup-m365-bot.sh
(+249 files in other folders)
